Added my solution for the Quix task

--- a/profile.html
+++ b/profile.html
@@ -108,6 +108,28 @@
             </svg>
           </a>
         </li>
+        <li class="navigation__list-item">
+          <a
+            class="navigation__link"
+            href="/form.html"
+            aria-label="go to form page"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="24px"
+              viewbox="0 0 100 100"
+              width="24px"
+            >
+              <path
+                d="M 10,30
+    A 20,20 0,0,1 50,30
+    A 20,20 0,0,1 90,30
+    Q 90,60 50,90
+    Q 10,60 10,30 z"
+              />
+            </svg>
+          </a>
+        </li>
         <li class="navigation__list-item navigation__list-item--active">
           <a
             class="navigation__link"
